substrate/frame/election-provider-support/solution-type/tests/ui/fail/wrong_attribute.stderr
error: compact solution can accept only #[compact]
  --> tests/ui/fail/wrong_attribute.rs:21:2
   |
21 |     #[pages(1)] pub struct TestSolution::<
   |     ^^^^^^^^^^^
